Mobile White Space Fix
- Calculating canvas size based on additional safe areas that are created by notch devices

--- a/src/style.css
+++ b/src/style.css
@@ -15,9 +15,7 @@ body,
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100dvh;
     margin: 0;
     padding: 0;
     overflow: hidden; /* Prevent scrolling */
@@ -26,14 +24,25 @@ body,
     font-size: 18px; 
     line-height: 1.5;
     background: linear-gradient(180deg, #0a0e27, black); 
+
+    padding-top: env(safe-area-inset-top);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-left: env(safe-area-inset-left);
+}
+
+html, body {
+    min-height: 100%; /* Fallback for browsers that don't support 100dvh */
 }
 
 canvas, .r3f
 {
-    width: 100%;  
-    height: 100%;
-    border: none; 
-    z-index: 1;
+    /* Stretch to fill the safe area */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100% + env(safe-area-inset-left) + env(safe-area-inset-right));
+    height: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
 }
 
 /* Typography Defaults */
